--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Principal</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/home.css"/>
+        <link rel="stylesheet" href="css/mainStyle.css"/>
     </head>
     <body>
-        <div>TODO write content</div>
+        <header>
+            <div class="container">
+                <div class="navbar">
+                    <a  class="nav-left" href="/">
+                        <img class="logo" src="images/logo.png" alt="Logo"/>
+                    </a>
+
+                    <nav>
+                        <ul class="nav-right">
+                            <li><a href="">Principal</a></li>
+                            <li><a href="">Nosotros</a></li>
+                            <li><a href="">Destinos</a></li>
+                            <li><a href="">Tips</a></li>
+                            <li><a href="">Contacto</a></li>
+                        </ul>
+                    </nav>
+
+                </div>
+                
+                <div class="content">
+
+            <h1>Descubriendo <br> Costa Rica</h1>
+
+        </div >
+        </header>
+        
     </body>
 </html>
