--- a/src/main/resources/static/destinations.html
+++ b/src/main/resources/static/destinations.html
@@ -30,8 +30,8 @@
                 </nav>
                 <h1>Destinos</h1>
             </header>
-            <main>
-
+            <main class="main-container">
+                
             </main>
             <footer class="footer">
                 <div>
