Login and signup updated

--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -2,19 +2,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Turisteando</title>
+        <title>Turisteando - Registrarse</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/signup.css"/>
+        <link rel="stylesheet" href="css/signupLogin.css"/>
         <link rel="stylesheet" href="css/mainStyles.css"/>
     </head>
-    <body>
+    <body class="signup-background">
         <header>
             <nav class="navbar"></nav>
         </header>
         <main>
             <div class="center">
                 <h1 class="formTitle">Registrarse</h1>
+                <p class="signup-login-link">¿Ya tienes una cuenta? <a href="/login.html">Inicia sesión</a></p>
                 <form class="form" action="action">
                     <div class="txt-field">
                         <label>Nombre</label>
