all pages updated

--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -5,12 +5,20 @@
         <title>Turisteando - Registrarse</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- favicon -->
+        <link rel="icon" href="./images/favicon.png" type="image/x-icon"
+              title="Gps icons created by Freepik from www.flaticon.com">
+        <!-- CSS -->
         <link rel="stylesheet" href="css/signupLogin.css"/>
         <link rel="stylesheet" href="css/mainStyles.css"/>
     </head>
     <body class="signup-background">
         <header>
-            <nav class="navbar"></nav>
+            <nav class="navbar">
+                <a  class="nav-left" href="/home.html">
+                    <img class="logo" src="./images/logo.png" alt="Logo Turisteando"/>
+                </a>
+            </nav>
         </header>
         <main>
             <div class="center">
@@ -21,11 +29,11 @@
                         <label>Nombre</label>
                         <input type="text" required>
                     </div>
-                     <div class="txt-field">
+                    <div class="txt-field">
                         <label>Apellidos</label>
                         <input type="text" required>
                     </div>
-                     <div class="txt-field">
+                    <div class="txt-field">
                         <label>Correo electrónico</label>
                         <input type="email" required>
                     </div>
@@ -33,7 +41,7 @@
                         <label>Teléfono</label>
                         <input type="number" required>
                     </div>
-                     <div class="txt-field">
+                    <div class="txt-field">
                         <label>Fecha Nacimiento</label>
                         <input type="date" required>
                     </div>
