--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -5,12 +5,20 @@
         <title>Turisteando - Iniciar sesión</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- favicon -->
+        <link rel="icon" href="./images/favicon.png" type="image/x-icon"
+              title="Gps icons created by Freepik from www.flaticon.com">
+        <!-- CSS -->
         <link rel="stylesheet" href="css/signupLogin.css"/>
         <link rel="stylesheet" href="css/mainStyles.css"/>
     </head>
     <body class="login-background">
         <header>
-            <nav class="navbar"></nav>
+            <nav class="navbar">
+                <a  class="nav-left" href="/home.html">
+                    <img class="logo" src="./images/logo.png" alt="Logo Turisteando"/>
+                </a>
+            </nav>
         </header>
         <main>
             <div class="center">
@@ -21,7 +29,7 @@
                         <label>Correo electrónico</label>
                         <input type="email" id="usuario" name="usuario" required>
                     </div>
-                     <div class="txt-field">
+                    <div class="txt-field">
                         <label>Contraseña</label>
                         <input type="password" id="password" name="password" required>
                     </div>
