--- a/src/main/resources/static/seguro.html
+++ b/src/main/resources/static/seguro.html
@@ -5,6 +5,9 @@
         <title>Turisteando - Seguros</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- favicon -->
+        <link rel="icon" href="./images/favicon.png" type="image/x-icon"
+              title="Gps icons created by Freepik from www.flaticon.com">
         <!-- Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <!-- Bootstrap Icons -->
@@ -17,15 +20,16 @@
         <div class="page-container">
             <header class="header">
                 <nav class="navbar">
-                    <a  class="nav-left" href="url">
+                    <a  class="nav-left" href="/home.html">
                         <img class="logo" src="./images/logo.png" alt="Logo Turisteando"/>
                     </a>
                     <ul class="nav-right">
-                        <li><a href="url">Destinos</a></li>
-                        <li><a href="url">Seguros</a></li>
-                        <li><a href="url">Tips</a></li>
-                        <li><a href="url">Nosotros</a></li>
-                        <li><a href="url">Contacto</a></li>
+                        <li><a href="/destinations.html">Destinos</a></li>
+                        <li><a href="/seguro.html">Seguros</a></li>
+                        <li><a href="/tips.html">Tips</a></li>
+                        <li><a href="/about.html">Nosotros</a></li>
+                        <li><a href="/contact.html">Contacto</a></li>
+                        <li><a href="/receipt.html"><em class="bi bi-bag-check"></em></a></li>
                     </ul>
                 </nav>
                 <h1>Seguros</h1>
