destinos and home updated

--- a/src/main/resources/static/about.html
+++ b/src/main/resources/static/about.html
@@ -35,7 +35,14 @@
                 <h1>Nosotros</h1>
             </header>
             <main class="main-container">
-
+                <section class="sec-division">
+                    <div class="sec-division-left"> 
+                        <h2>¿<span>Por qué</span> viajar con nosotros?</h2>
+                    </div>
+                    <div class="sec-division-right">
+                        Viajar con nosotros significa tener acceso a una amplia variedad de destinos turísticos, actividades emocionantes y alojamiento de alta calidad, todo en un solo lugar. Nuestro equipo está comprometido en hacer que cada experiencia de viaje sea única e inolvidable, brindando atención personalizada y soluciones personalizadas para satisfacer las necesidades de cada uno de nuestros clientes. Viaja con nosotros y descubre todo lo que el mundo tiene para ofrecer.
+                    </div>
+                </section>
             </main>
             <footer class="footer">
                 <div>
