--- a/src/main/resources/static/destinations.html
+++ b/src/main/resources/static/destinations.html
@@ -35,7 +35,80 @@
                 <h1>Destinos</h1>
             </header>
             <main class="main-container">
+                <section class="sec-division">
+                    <div class="sec-division-left">
+                        <h2>¿<span>Adónde</span> quieres ir?</h2>
+                    </div>
+                    <div class="sec-division-right">
+                        Explora el mundo con nuestra selección de destinos turísticos. ¿Buscas aventuras emocionantes, playas relajantes o ciudades llenas de historia? Sea cual sea tu preferencia, tenemos el destino perfecto para ti. ¿A dónde quieres ir? Descubre todo lo que tenemos para ofrecer y comienza a planificar tus próximas vacaciones.
+                    </div>
+                </section>
+                <section class="destinations">
+                    <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+                        <label class="btn btn-outline-primary" for="btnradio1">San José</label>
 
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+                        <label class="btn btn-outline-primary" for="btnradio2">Alajuela</label>
+
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+                        <label class="btn btn-outline-primary" for="btnradio3">Cartago</label>
+
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off">
+                        <label class="btn btn-outline-primary" for="btnradio4">Heredia</label>
+
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio5" autocomplete="off">
+                        <label class="btn btn-outline-primary" for="btnradio5">Guanacaste</label>
+
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio6" autocomplete="off">
+                        <label class="btn btn-outline-primary" for="btnradio6">Puntarenas</label>
+
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio7" autocomplete="off">
+                        <label class="btn btn-outline-primary" for="btnradio7">Limón</label>
+                    </div>
+                    <div class="row row-cols-1 row-cols-md-3 g-4">
+                        <div class="col">
+                            <div class="card" style="width: 18rem;">
+                                <img src="../images/signup.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Volcán Arenal</h5>
+                                    <p class="card-text">El volcán Arenal está situado en el distrito de La Fortuna, cantón de San Carlos, en la provincia de Alajuela.</p>
+                                    <a href="#" class="btn btn-warning "><em class="bi bi-star-fill"></em></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card" style="width: 18rem;">
+                                <img src="../images/signup.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Volcán Arenal</h5>
+                                    <p class="card-text">El volcán Arenal está situado en el distrito de La Fortuna, cantón de San Carlos, en la provincia de Alajuela.</p>
+                                    <a href="#" class="btn btn-warning "><em class="bi bi-star-fill"></em></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card" style="width: 18rem;">
+                                <img src="../images/signup.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Volcán Arenal</h5>
+                                    <p class="card-text">El volcán Arenal está situado en el distrito de La Fortuna, cantón de San Carlos, en la provincia de Alajuela.</p>
+                                    <a href="#" class="btn btn-warning "><em class="bi bi-star-fill"></em></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card" style="width: 18rem;">
+                                <img src="../images/signup.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Volcán Arenal</h5>
+                                    <p class="card-text">El volcán Arenal está situado en el distrito de La Fortuna, cantón de San Carlos, en la provincia de Alajuela.</p>
+                                    <a href="#" class="btn btn-warning "><em class="bi bi-star-fill"></em></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </main>
             <footer class="footer">
                 <div>
@@ -48,7 +121,7 @@
                     <div class="footer-text">Todos los derechos reservados&nbsp;|&nbsp;
                         <a href="">Términos</a>&nbsp;|&nbsp;
                         <a href="">Privacidad</a>
-                    </div>
+                    </div> 
                     <div class="footer-text"><a href="">© 2023 Turisteando</a>
                     </div>
                 </div>
