--- a/src/main/resources/static/tips.html
+++ b/src/main/resources/static/tips.html
@@ -35,7 +35,14 @@
                 <h1>Tips de Viaje</h1>
             </header>
             <main class="main-container">
-
+                <section class="sec-division">
+                    <div class="sec-division-left">
+                        <h2>Viaja con <span>confianza</span></h2>
+                    </div>
+                    <div class="sec-division-right">
+                        Viajar con confianza es clave para disfrutar al máximo tus vacaciones. En nuestra sección de tips de viaje encontrarás consejos útiles para planificar tu viaje, evitar imprevistos y proteger tu seguridad en el destino. Desde cómo hacer un presupuesto hasta cómo elegir el mejor alojamiento, nuestros consejos te ayudarán a viajar con confianza y aprovechar cada momento de tu experiencia. Viaja tranquilo y seguro con nuestros tips de viaje.
+                    </div>
+                </section>
             </main>
             <footer class="footer">
                 <div>
