--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -24,12 +24,10 @@
             <div class="center">
                 <h1 class="formTitle">Iniciar sesión</h1>
                 <p class="signup-login-link">¿Aún no tienes una cuenta? <a href="/signup.html">Regístrate</a></p>
-                
-                
-                <form class="form" action="@{/login}" method= "post">
+                <form class="form" action="/home.html">
                     <div class="txt-field">
                         <label>Correo electrónico</label>
-                        <input type="email" id="email" name="usuario" required>
+                        <input type="email" id="usuario" name="usuario" required>
                     </div>
                     <div class="txt-field">
                         <label>Contraseña</label>
